add middleware and bug fix
